# discordml

./: .gitignore  README.md  discord.opam  dune-project
example/: dune  main.ml
lib/: agent.ml  consumer.ml  csprng.ml  discord.ml  dune  event.ml  fqueue.ml  gateway.ml  httpx.ml  intent.ml  object.ml  openai.ml  openai_entity.ml  opus.ml  rate_limiter.ml  rest.ml  state.ml  util.ml  voice_event.ml  voice_gateway.ml  voice_udp_stream.ml  voice_udp_stream.mli  ws.ml  ws.mli
